🚧 Create bundle config

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,8 @@
 # Default Sapper
 .DS_Store
 /node_modules/
-/src/node_modules/@sapper/
 yarn-error.log
 /cypress/screenshots/
-/__sapper__/
 
 # Logs
 logs
@@ -124,3 +122,7 @@ src/static
 
 ## Cyrpess
 /cypress/videos/
+
+# Playground
+
+/dist
