--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "@fat-fuzzy/playground",
   "version": "0.0.1",
   "description": "Fuzzy Playground - A Svelte component library for interactive canvas animations",
-  "main": "index.js",
+  "main": "dist/build/playground.min.js",
   "scripts": {
+    "build": "rollup -c",
+    "prepublishOnly": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +17,18 @@
   "bugs": {
     "url": "https://github.com/fat-fuzzy/playground/issues"
   },
-  "homepage": "https://github.com/fat-fuzzy/playground#readme"
+  "homepage": "https://github.com/fat-fuzzy/playground#readme",
+  "devDependencies": {
+    "@rollup/plugin-node-resolve": "11.2.0",
+    "@rollup/plugin-replace": "2.4.1",
+    "@rollup/plugin-url": "6.0.0",
+    "autoprefixer": "10.2.5",
+    "postcss": "8.2.8",
+    "rollup": "2.41.2",
+    "rollup-plugin-svelte": "7.1.0",
+    "rollup-plugin-terser": "7.0.2",
+    "sass": "1.32.8",
+    "svelte": "3.35.0",
+    "svelte-preprocess": "4.6.9"
+  }
 }
