--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
   "name": "@fat-fuzzy/playground",
   "version": "0.0.1",
   "description": "Fuzzy Playground - A Svelte component library for interactive canvas animations",
-  "main": "dist/build/playground.min.js",
+  "main": "dist/playground.min.js",
   "scripts": {
+    "dev": "run-p watch:rollup",
     "build": "rollup -c",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "cy:run": "cypress run",
+    "cy:open": "cypress open",
+    "watch:rollup": "rollup -c -w",
+    "test": "run-p --race dev cy:run"
   },
   "repository": {
     "type": "git",
@@ -17,13 +22,22 @@
     "url": "https://github.com/fat-fuzzy/playground/issues"
   },
   "homepage": "https://github.com/fat-fuzzy/playground#readme",
+  "cypress-cucumber-preprocessor": {
+    "nonGlobalStepDefinitions": true
+  },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "11.2.0",
     "@rollup/plugin-replace": "2.4.1",
     "@rollup/plugin-url": "6.0.0",
+    "@sveltech/routify": "1.9.10",
     "autoprefixer": "10.2.5",
+    "cucumber": "7.0.0-rc.0",
+    "cypress": "6.6.0",
+    "cypress-cucumber-preprocessor": "4.0.1",
+    "npm-run-all": "4.1.5",
     "postcss": "8.2.8",
     "rollup": "2.41.2",
+    "rollup-plugin-livereload": "2.0.0",
     "rollup-plugin-svelte": "7.1.0",
     "rollup-plugin-terser": "7.0.2",
     "sass": "1.32.8",
