--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 /node_modules/
 yarn-error.log
 /cypress/screenshots/
+/public/build/
+
+.DS_Store
 
 # Logs
 logs
@@ -124,5 +127,3 @@ src/static
 /cypress/videos/
 
 # Playground
-
-/dist
