--- a/package.json
+++ b/package.json
@@ -2,14 +2,12 @@
   "name": "@fat-fuzzy/playground",
   "version": "0.0.1",
   "description": "Fuzzy Playground - A Svelte component library for interactive canvas animations",
-  "main": "dist/playground.min.js",
   "scripts": {
-    "dev": "run-p watch:rollup",
     "build": "rollup -c",
-    "prepublishOnly": "npm run build",
+    "dev": "rollup -c -w",
+    "start": "sirv public",
     "cy:run": "cypress run",
     "cy:open": "cypress open",
-    "watch:rollup": "rollup -c -w",
     "test": "run-p --race dev cy:run"
   },
   "repository": {
@@ -26,22 +24,22 @@
     "nonGlobalStepDefinitions": true
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "17.1.0",
     "@rollup/plugin-node-resolve": "11.2.0",
-    "@rollup/plugin-replace": "2.4.1",
-    "@rollup/plugin-url": "6.0.0",
-    "@sveltech/routify": "1.9.10",
-    "autoprefixer": "10.2.5",
     "cucumber": "7.0.0-rc.0",
     "cypress": "6.6.0",
     "cypress-cucumber-preprocessor": "4.0.1",
     "npm-run-all": "4.1.5",
-    "postcss": "8.2.8",
     "rollup": "2.41.2",
+    "rollup-plugin-css-only": "3.1.0",
     "rollup-plugin-livereload": "2.0.0",
     "rollup-plugin-svelte": "7.1.0",
     "rollup-plugin-terser": "7.0.2",
     "sass": "1.32.8",
     "svelte": "3.35.0",
     "svelte-preprocess": "4.6.9"
+  },
+  "dependencies": {
+    "sirv-cli": "1.0.11"
   }
 }
