--- a/.github/workflows/npm-build.yml
+++ b/.github/workflows/npm-build.yml
@@ -22,7 +22,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: npm ci
       - run: npm run build --if-present
-      - run: npm run test
+      - run: npm test
 
   publish-npm:
     needs: build
