--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "sirv public",
     "cy:run": "cypress run",
     "cy:open": "cypress open",
-    "test": "run-p --race dev cy:run"
+    "test": "run-p --race start cy:run"
   },
   "repository": {
     "type": "git",
