--- a/package.json
+++ b/package.json
@@ -26,13 +26,16 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "17.1.0",
     "@rollup/plugin-node-resolve": "11.2.0",
+    "autoprefixer": "10.2.5",
     "cucumber": "7.0.0-rc.0",
     "cypress": "6.6.0",
     "cypress-cucumber-preprocessor": "4.0.1",
     "npm-run-all": "4.1.5",
+    "postcss": "8.2.8",
     "rollup": "2.41.2",
     "rollup-plugin-css-only": "3.1.0",
     "rollup-plugin-livereload": "2.0.0",
+    "rollup-plugin-sass": "1.2.2",
     "rollup-plugin-svelte": "7.1.0",
     "rollup-plugin-terser": "7.0.2",
     "sass": "1.32.8",
